Implement new photoStation endpoints
* Implement new /photoStationById/{country}/{id} endpoint

* Use MARIADB_* environment variables

* Set TZ environment variable for mariadb testcontainer

* Set TZ environment variable for mariadb testcontainer to plain "UTC"

* Add jdbcUrl parameter for timezone and unicode support to mariadb testcontainer

* Remove extra URL parameter

* Disable createdAt timestamp assertion

* Define openApi for photoStationsByCountry, photoStationsByPhotographer and photoStationsByRecentPhotoImports

* Implement /photoStationsByCountry/{country} endpoint

* Simplify findStationsBy and move filters hasPhoto and active into DB query

* Improve jsonPath expression to make it more resilient to reordering

* Implement new endpoint photoStationsByPhotographer

* Change test of photoStationsByPhotographer to station with 2 photos

* Mark old endpoints deprecated

* Update api.log

* Implement /photoStationsByRecentPhotoImports endpoint

* Remove unnecessary modifiers

* Update openApiGenerator settings

* PhotoId handling in ProblemReport

* Sort photos of a station my primary and id

* Update documentation

fix #32